--- a/blog-express/package.json
+++ b/blog-express/package.json
@@ -7,6 +7,7 @@
     "dev": "cross-env NODE_ENV=dev nodemon ./bin/www"
   },
   "dependencies": {
+    "connect-redis": "^6.0.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
@@ -15,6 +16,7 @@
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
     "mysql2": "^2.3.3",
+    "redis": "^2.8.0",
     "xss": "^1.0.10"
   },
   "devDependencies": {
